# STOCBIONET

./: .gitignore  CMakeLists.txt  DGVertex.cpp  DGVertex.h  DGVertex.hpp  DM_output.csv  DependencyGraph.cpp  DependencyGraph.h  DependencyGraph.hpp  DirectMethod.cpp  DirectMethod.h  DirectMethod.hpp  Entrada2.txt  Entrada3.txt  EntradaND.txt  FirstReactionMethod.cpp  FirstReactionMethod.h  FirstReactionMethod.hpp  FirstReactionMethodDG.cpp  FirstReactionMethodDG.h  FirstReactionMethodDG.hpp  InstancesCreator.py  MinHeap.cpp  MinHeap.h  MinHeap.hpp  Model.cpp  Model.h  Model.hpp  NotDelayed.cpp  NotDelayed.h  README.md  SSA.cpp  SSA.h  SSA.hpp  Specie.cpp  Specie.h  Stochastic Simulation Algorithm.mdj  Utils.cpp  Utils.h  Utils.hpp  (+11 more)
DependencyGraph/: DGVertex.h  DependencyGraph.cpp  DependencyGraph.h  main.cpp
Examples/: 1000-100-10-delay.txt  6-react.txt  A-decay.txt  DelayExample.txt  DelayExample2.txt  Input 2.txt  Input 7.txt  InstancesCreator.py  boladao-delay.txt  circadian_oscillations.txt  colloidal-delay.txt  colloidal.txt  gen.txt  modelo-g.txt  modelo.txt  same-specie.txt  strong10.txt  strong100.txt  strong3.txt  tightlyCoupled-1-7.txt  tightlyCoupled-2-10.txt  tightlyCoupled-2-100.txt  tightlyCoupled-2-1000-10.txt  tightlyCoupled-2-1000-2.txt  tightlyCoupled-2-1000-6.txt  tightlyCoupled-2-Delay-1000-2.txt  tightlyCoupled-2-Delay-1000-6.txt  tightlyCoupled-3-50.txt  weak10.txt  weak1000.txt  weaklyCoupled1000.txt  weaklyCoupled2-100.txt  weaklyCoupled300.txt  weaklyCoupled4.txt
GerarGRN/: Delay.cpp  Delay.h  Model.cpp  Model.h  ReactFile.cpp  ReactFile.h  Reaction.cpp  Reaction.h  Specie.cpp  Specie.h  SpecieQuantity.cpp  (+10 more)
(+133 files in other folders)
